# NexusBench

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: tests.yaml
docs/: benchmarks.md
nexusbench/: __init__.py  benchmarks.py  clients.py  config.py  entrypoint.py  prompters.py  suites.py  utils.py
nexusbench/tools/: climate.py  cvecpe.py  it_hard_0.py  it_hard_1.py  langchain_math.py  multitool_typewriter_hard.py  nvdlib.py  relational.py  ticket_tracking.py  typewriter_hard.py  virustotal.py  virustotal_nested.py
tests/: test_prompters.py
