[build-system]
requires = ["setuptools>=75.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusbench"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "requests==2.32.3",
    # Clients
    "openai==1.54.4",
    "anthropic==0.39.0",
    "mistralai==0.1.8",
    "qwen-agent==0.0.10",
    # General infra
    "tqdm==4.67.0",
    "tabulate==0.9.0",
    "datasets==3.1.0",
    "huggingface-hub==0.26.2",
    "rich==13.9.4",
    # API bank benchmark
    "nltk==3.9.1",
    "rank-bm25==0.2.2",
    "numpy==2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "requests-mock==1.12.1",
    "black==24.10.0",
    "pylint==3.3.1",
]

[tool.setuptools]
packages = ["nexusbench"]

[project.scripts]
nexusbench = "nexusbench:main"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0114,C0115,C0116,C0207,C0301,C0302,C0415,C3001,E0015,E1101,E1133,E1136,R0401,R0801,R0902,R0903,R0904,R0911,R0912,R0913,R0914,R0915,R0917,R1705,R1724,R1735,W0105,W0221,W0237,W0613,W0702,W0718,W1203,W3101"

[tool.pylint.master]
fail-under = 9.60
